--- a/app/_components/models/style.css
+++ b/app/_components/models/style.css
@@ -1,30 +1,32 @@
 .modalSwiper > .swiper-wrapper > .swiper-button-prev::after {
-  color: #0f143a66;
+  color: #0f143a66 !important;
   font-size: 20px !important;
 }
 .modalSwiper > .swiper-wrapper > .swiper-button-next::after {
   font-size: 20px !important;
-  color: #0f143a66;
-  right: -8px;
+  color: #0f143a66 !important;
+  right: -8px !important;
 }
 .modalSwiper > .swiper-wrapper > .swiper-button-prev {
-  left: -8px;
+  left: -8px !important;
 }
 .modalSwiper > .swiper-wrapper > .swiper-button-next {
-  right: -8px;
+  right: -8px !important;
 }
-.modalSwiper > .swiper-wrapper > .swiper-slide-prev {
-  opacity: 0.5;
-  border: 1px solid #ccc;
+.modalSwiper > .swiper-wrapper > .swiper-slide {
+  opacity: 0.5 !important;
+  border: 1px solid #ccc !important;
 }
-.modalSwiper > .swiper-wrapper > .swiper-slide-active {
-  border: 1px solid #000;
+.modalSwiper > .swiper-wrapper > .swiper-slide.swiper-slide-active {
+  opacity: 1 !important;
+
+  border: 1px solid #000 !important;
 }
-.modalSwiper > .swiper-wrapper > .swiper-slide-next {
-  opacity: 0.5;
-  border: 1px solid #ccc;
+.modalSwiper > .swiper-wrapper > .swiper-slide {
+  opacity: 0.5 !important;
+  border: 1px solid #ccc !important;
 }
 .modalSwiper > .swiper-wrapper > .swiper-slide {
   border-radius: 15px !important;
-  overflow: hidden;
+  overflow: hidden !important;
 }
