--- a/app/_components/homepage/presets/styles.css
+++ b/app/_components/homepage/presets/styles.css
@@ -1,48 +1,47 @@
 .swiper {
-    width: 100%;
-    height: 100%;
-    margin: 50px auto;
+  width: 100%;
+  height: 100%;
+  margin: 50px auto;
 }
 
 .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    height: auto;
-    padding: 20px 0;
-    background: #fff;
-    width: 100%;
-    padding: 20px;
-    border-radius: 24px 6px 24px 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  font-size: 18px;
+  height: auto;
+  padding: 20px 0;
+  background: #fff;
+  width: 100%;
+  padding: 20px;
+  border-radius: 24px 6px 24px 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-.card {
-    width: 100%;
-    height: auto;
-    min-height: 439px;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+.presetCard {
+  width: 100%;
+  height: auto;
+  min-height: 439px;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .presetImage {
-    width: 80%;
+  width: 80%;
 }
 
 .presetImageContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 hr.solid {
-    border-top: 2px solid #eee;
+  border-top: 2px solid #eee;
 }
 
 .productTitle {
-    font-size: 24px;
-    color: #0F143A;
+  font-size: 24px;
+  color: #0f143a;
 }
