--- a/app/_components/AboutPage/style.css
+++ b/app/_components/AboutPage/style.css
@@ -253,10 +253,9 @@
 .flip-card-back {
   background: white;
   color: white;
-
-  -webkit-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+  -webkit-transform: perspective(1000px) translate3d(0, 0, 0) rotateY(-180deg);
+  -ms-transform: perspective(1000px) translate3d(0, 0, 0) rotateY(-180deg);
+  transform: perspective(1000px) translate3d(0, 0, 0) rotateY(-180deg);
   z-index: 1;
   display: flex;
   justify-content: center;
