--- a/app/_components/AboutPage/card/card.css
+++ b/app/_components/AboutPage/card/card.css
@@ -9,9 +9,8 @@
   position: relative;
 
   /* Styling */
-  border-radius: 5px;
-  border: 5px solid white;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
+  border-radius: 13px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
   user-select: none;
   cursor: pointer;
@@ -39,14 +38,11 @@
   font-weight: 800;
   font-size: 60px;
   color: white;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
 }
 
 .card-front {
-  background-color: #73d0ff;
 }
 
 .card-back {
-  background-color: #ffad66;
   transform: rotateY(180deg);
 }
