--- a/app/_components/AboutPage/style.css
+++ b/app/_components/AboutPage/style.css
@@ -226,8 +226,6 @@
   outline: 0;
 }
 
-
-
 .flip-card-front,
 .flip-card-back {
   position: absolute;
@@ -260,3 +258,39 @@ h3 {
   font-family: Verdana, sans-serif;
   font-weight: bold;
 }
+
+/* //// */
+
+/* Profile card front */
+
+.profile-card {
+  height: 52rem;
+  position: relative;
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  transition: all 0.1s;
+}
+
+.profile-card-face {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden;
+}
+
+.profile-card-back {
+  transform: rotateY(180deg);
+}
+
+.profile-card:hover .profile-card-front {
+  transform: rotateY(-180deg);
+}
+
+.profile-card:hover .profile-card-back {
+  transform: rotateY(0);
+  transition: all 0.3s;
+}
+
+/* Profile card front */
